Fixing styling for horizontal/vertical break on point page

--- a/web/themes/new_weather_theme/assets/sass/components/location-search.scss
+++ b/web/themes/new_weather_theme/assets/sass/components/location-search.scss
@@ -38,6 +38,8 @@
 
 .wx-combo-box__toggle-list {
   @extend .usa-combo-box__toggle-list;
+  top: unset;
+  bottom: unset;
 }
 
 .wx-combo-box__clear-input {
